tests/specs/ecosystem/bureaudouble/islet/0_0_42.test
bureaudouble/islet/0.0.42
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@bureaudouble/outils@0.0.63": "jsr:@bureaudouble/outils@0.0.63",
      "jsr:@bureaudouble/scripted@0.0.2": "jsr:@bureaudouble/scripted@0.0.2",
      "jsr:@std/assert@^0.216.0": "jsr:@std/assert@0.216.0",
      "jsr:@std/crypto@0.216": "jsr:@std/crypto@0.216.0",
      "jsr:@std/encoding@0.216": "jsr:@std/encoding@0.216.0",
      "jsr:@std/fs@0.216": "jsr:@std/fs@0.216.0",
      "jsr:@std/path@0.216": "jsr:@std/path@0.216.0",
      "jsr:@std/path@^0.216.0": "jsr:@std/path@0.216.0",
      "npm:react-dom@^18.2.0": "npm:react-dom@18.3.1_react@18.3.1",
      "npm:react@^18.2.0": "npm:react@18.3.1"
    },
    "jsr": {
      "@bureaudouble/outils@0.0.63": {
        "integrity": "4eb0002c1cf5b6b7ab9f62a82085ffe7d793cd36a5e40da41574e7db2d4735d8"
      },
      "@bureaudouble/scripted@0.0.2": {
        "integrity": "6ba53621ed24438e28f9949301f39eb0241e8746433b1465479b91c29475b58b"
      },
      "@std/assert@0.216.0": {
        "integrity": "f65392edf3bec39e2d1028e51f1da549db81691034b244eaba83318a757c0c2e"
      },
      "@std/crypto@0.216.0": {
        "integrity": "04efc82b5daef3ca07a4dfcb8b8d5ed6832f430976b928e9c2af71b2ea79c1d9"
      },
      "@std/encoding@0.216.0": {
        "integrity": "607d82c978e91aa9db455e79fdd09a9bc2e9089de5c05c8807c19b8ea05ce226"
      },
      "@std/fs@0.216.0": {
        "integrity": "5ed8d2b3aa820d42dd84ee612aed5e4e24f20046709d41d18024ae2ac7463ed6",
        "dependencies": [
          "jsr:@std/path@^0.216.0"
        ]
      },
      "@std/path@0.216.0": {
        "integrity": "85c121f1b43f7fb17e225567c4f151b3a67796ed8c619d37f9d61ea46116a2f0",
        "dependencies": [
          "jsr:@std/assert@^0.216.0"
        ]
      }
    },
    "npm": {
      "js-tokens@4.0.0": {
        "integrity": "sha512-RdJUflcE3cUzKiMqQgsCu06FPu9UdIJO0beYbPhHN4k6apgJtifcoCtT9bcxOpYBtpD2kCM6Sbzg4CausW/PKQ==",
        "dependencies": {}
      },
      "loose-envify@1.4.0": {
        "integrity": "sha512-lyuxPGr/Wfhrlem2CL/UcnUc1zcqKAImBDzukY7Y5F/yQiNdko6+fRLevlw1HgMySw7f611UIY408EtxRSoK3Q==",
        "dependencies": {
          "js-tokens": "js-tokens@4.0.0"
        }
      },
      "react-dom@18.3.1_react@18.3.1": {
        "integrity": "sha512-5m4nQKp+rZRb09LNH59GM4BxTh9251/ylbKIbpe7TpGxfJ+9kv6BLkLBXIjjspbgbnIBNqlI23tRnTWT0snUIw==",
        "dependencies": {
          "loose-envify": "loose-envify@1.4.0",
          "react": "react@18.3.1",
          "scheduler": "scheduler@0.23.2"
        }
      },
      "react@18.3.1": {
        "integrity": "sha512-wS+hAgJShR0KhEvPJArfuPVN1+Hz1t0Y6n5jLrGQbkb4urgPE/0Rve+1kMB1v/oWgHgm4WIcV+i7F2pTVj+2iQ==",
        "dependencies": {
          "loose-envify": "loose-envify@1.4.0"
        }
      },
      "scheduler@0.23.2": {
        "integrity": "sha512-UOShsPwz7NrMUqhR6t0hWjFduvOzbtv7toDH1/hIrfRNIDBnnBWd0CwJTGvTpngVlmwGCdP9/Zl/tVrDqcuYzQ==",
        "dependencies": {
          "loose-envify": "loose-envify@1.4.0"
        }
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: Uncaught Error: Failed resolving package subpath './jsx-runtime' for '<global_npm_dir>/react/18.3.1/package.json': [ERR_PACKAGE_PATH_NOT_EXPORTED] Package subpath './jsx-runtime' is not defined for types by "exports" in '<global_npm_dir>/react/18.3.1/package.json' imported from '<tmpdir>/src/react/jsx-runtime.ts'
    at Object.resolveModuleNames (ext:deno_tsc/99_main_compiler.js:756:28)
    at actualResolveModuleNamesWorker (ext:deno_tsc/00_typescript.js:120758:144)
    at resolveModuleNamesWorker (ext:deno_tsc/00_typescript.js:121155:22)
    at resolveModuleNamesReusingOldState (ext:deno_tsc/00_typescript.js:121250:16)
    at processImportedModules (ext:deno_tsc/00_typescript.js:122813:120)
    at findSourceFileWorker (ext:deno_tsc/00_typescript.js:122544:9)
    at findSourceFile (ext:deno_tsc/00_typescript.js:122408:22)
    at ext:deno_tsc/00_typescript.js:122357:24
    at getSourceFileFromReferenceWorker (ext:deno_tsc/00_typescript.js:122326:28)
    at processSourceFile (ext:deno_tsc/00_typescript.js:122355:7)

